--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,7 +1,9 @@
 .login-container {
     display: flex;
     height: 100vh;
-    background-color: #f0f4f8;
+    background-color: #1D1F21;
+    ;
+
 }
 
 .login-image {
@@ -64,8 +66,8 @@ mat-card {
     max-width: 450px;
     padding: 2rem;
     border-radius: 15px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
+    box-shadow: 5 10px 30px rgba(0, 0, 0, 0.1);
+    background-color: #36454f;
     transition: all 0.3s ease;
     height: 100vh;
 }
